--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,10 @@ menu {
 	color: #000000;
 }
 
+.news-sources-heading {
+	margin-left: 20px;
+}
+
 .news-sources {
 	width: 119px;
 	height: 29px;
@@ -80,7 +84,22 @@ menu {
 	width: 1024px;
 	height: 686px;
 }
-
-.news-list {
+.news-sources-list-wrapper {
+	text-align: center;
+}
+.news-sources-list {
+	float: left;
 	display: inline-block;
+	width: 27%;
+	height: 350px;
+	border: 3px solid #2a9d2b;
+	margin: 10px 40px 10px 10px;
+}
+.news-source-logo {
+	width: 80px;
+	height: 80px;
+}
+.news-sources-text {
+	flex: 1;
+	text-align: center;
 }
